instagram link changed

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -43,7 +43,7 @@ contact_links:
   - icon: instagram
     icon_pack: fab
     name: Instagram
-    link: 'https://www.instagram.com/lastefoto.ee/'
+    link: 'https://www.instagram.com/viktoriailjin/'
   - icon: facebook
     icon_pack: fab
     name: Facebook
