--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -32,7 +32,7 @@ address:
 coordinates:
   latitude: '59.426760'
   longitude: '24.818860'
-directions: 'Sisenege büroohoonesse ja minge 5. korrusele tuppa 513. '
+directions: 'Susi büroohoone, 5. korrus, tuba 513'
 office_hours:
 appointment_url: ''
 contact_links:
